# morseframes

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_gudhi_view.cpp
docs/: api.rst  benchmark_reproduction.md  benchmark_summary.md  conf.py  cpp_complex_view_api.md  cubical_complexes.md  discussion_package.md  experiments_morse_persistence.tex  gudhi_contribution_design_note.md  gudhi_maintainer_cover_note.md  gudhi_maintainer_scope_note.md  gudhi_upstream_file_map.md  gudhi_upstream_patch_map.md  gudhi_upstream_skeleton_branch.md  index.rst  inspecting_morse_data.rst  minimal_examples.rst  native_gudhi_large_lean_r30_table.tex  native_gudhi_overhead_summary_table.tex  native_gudhi_stage_profile_quick_prose.tex  native_gudhi_stage_profile_quick_table.tex  native_gudhi_view_default_r30_table.tex  native_gudhi_view_quick_table.tex  overview.rst  paper_implementation_protocol_draft.tex  phase0_conventions.md  plotting_demo.rst  profile_metric_fair_validation_prose.tex  profile_metric_fair_validation_table.tex  profile_selector_decision_summary_prose.tex  profile_selector_decision_summary_table.tex  project_overview.rst  python_api.md  python_prime_field_tutorial.md  quickstart.rst  related_paper.md  requirements.txt  selector_feature_diagnostic_prose.tex  selector_feature_diagnostic_table.tex  strategies.md  (+2 more)
examples/: example_barcode.cpp  example_morse_persistence_from_simplex_tree.cpp  gudhi_simplex_tree_morse.cpp
include/gudhi/: Morse_persistence.h
include/gudhi/Morse_persistence/: complex_view.h  diagram.h  morse_sequence.h  persistence_reducer.h  reference_map.h  strategy.h
include/gudhi/Morse_persistence/internal/: annotation.h  complex_view.h  field_annotation_store.h  field_arithmetic.h  filtered_complex.h  inverse_annotation_store.h  morse_reference_api.h  morse_sequence.h  reference_persistence.h  simplex_tree_builder.h  simplex_tree_morse.h  working_sets.h
include/morseframes/: annotation.hpp  complex_view.hpp  coreference_persistence.hpp  critical_order.hpp  cubical_complex.hpp  debug_checks.hpp  field_annotation_store.hpp  field_arithmetic.hpp  filtered_complex.hpp  incidence.hpp  instrumentation.hpp  inverse_annotation_store.hpp  morse_reference_api.hpp  morse_sequence.hpp  reference_persistence.hpp  simplex_tree_builder.hpp  simplex_tree_morse.hpp  standard_persistence.hpp  working_sets.hpp
python/examples/: cubical_grid_tutorial.py  plotly_morse_square_demo.py  prime_field_tutorial.py  quickstart.py
python/morseframes/: __init__.py  _core_bindings.cpp  plotting.py
python/tests/: test_benchmark_tool.py  test_package_metadata.py  test_plotting.py  test_python_api.py
tests/: test_gudhi_simplex_tree_view.cpp  test_morse_reference.cpp
tools/: analyze_selector_features.py  benchmark_cubical_grids.py  benchmark_persistence.py  benchmark_prime_field_overhead.py  calibrate_profile_gate.py  compare_profile_gates.py  render_benchmark_summary.py  render_native_gudhi_stage_profile.py  render_native_gudhi_view_table.py  render_synthetic_scale_table.py  reproduce_discussion_package.py  run_fair_profile_validation.py  summarize_selector_decisions.py  validate_with_gudhi.py
upstream/gudhi/: MANIFEST.md  README.md
upstream/gudhi/example/Morse_persistence/: CMakeLists.txt
upstream/gudhi/src/Morse_persistence/doc/: Intro_morse_persistence.h
upstream/gudhi/src/Morse_persistence/test/: test_morse_persistence_simplex_tree.cpp
upstream/gudhi/test/Morse_persistence/: CMakeLists.txt
