[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.0", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "morseframes"
version = "0.1.0"
description = "Morse sequences, reference maps, Morse complexes, and Morse-based persistent homology"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Laurent Najman" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest>=7,<9"]
docs = ["sphinx>=7,<9", "sphinx-rtd-theme>=2,<4", "myst-parser>=2,<5"]
plotting = ["plotly"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = [
  "-DMORSEFRAMES_BUILD_PYTHON=ON",
  "-DMORSEFRAMES_BUILD_TESTS=OFF",
  "-DMORSEFRAMES_BUILD_EXAMPLES=OFF",
  "-DMORSEFRAMES_BUILD_GUDHI_TOOLS=OFF",
]
wheel.packages = ["python/morseframes"]

[tool.scikit-build.editable]
mode = "inplace"
