[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.0", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "morseframes"
version = "0.1.0a1"
description = "Morse sequences, reference maps, Morse complexes, and Morse-based persistent homology"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Laurent Najman" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/lnajman/morseframes"
Documentation = "https://morseframes.readthedocs.io/"
Source = "https://github.com/lnajman/morseframes"
Changelog = "https://github.com/lnajman/morseframes/blob/main/CHANGELOG.md"
Issues = "https://github.com/lnajman/morseframes/issues"

[project.optional-dependencies]
dev = ["pytest>=7,<9"]
docs = ["sphinx>=7,<9", "sphinx-rtd-theme>=2,<4", "myst-parser>=2,<5"]
plotting = ["plotly"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = [
  "-DMORSEFRAMES_BUILD_PYTHON=ON",
  "-DMORSEFRAMES_BUILD_TESTS=OFF",
  "-DMORSEFRAMES_BUILD_EXAMPLES=OFF",
  "-DMORSEFRAMES_BUILD_GUDHI_TOOLS=OFF",
]
wheel.packages = ["python/morseframes"]
wheel.exclude = ["morseframes/_core_bindings.cpp"]

[tool.scikit-build.editable]
mode = "inplace"
